Add layout main navbar fixed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
 </head>
 
 <body>
-  <div class="navbar-fixed"></div>
+
+  <!--* Navbar Fixed -->
+  <div class="navbar-fixed">
+    <div class="navbar-left border">
+      <div id="logo" class="border">logo</div>
+      <nav class="border">
+        <ul>
+          <li><a href="#">prova</a></li>
+          <li><a href="#">prova</a></li>
+          <li><a href="#">prova</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="navbar-right border">
+      <nav class="border">
+        <ul>
+          <li><a href="#">prova</a></li>
+          <li><a href="#">prova</a></li>
+          <li><a href="#">prova</a></li>
+          <li><a href="#">prova</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 
   <header></header>
 
