Add layout header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
     </div>
   </div>
 
-  <header></header>
+  <header>
+    <!--* Jumbotron -->
+    <div class="large-container">
+      <div class="titolo"></div>
+      <div class="jumbotron">
+        <div class="small-col"></div>
+        <div class="large-col"></div>
+      </div>
+    </div>
+  </header>
 
   <main></main>
 
