Add Tariffs section layout

--- a/index.html
+++ b/index.html
@@ -38,18 +38,40 @@
     </div>
   </div>
 
-  <header>
+  <header class="p-top-50">
     <!--* Jumbotron -->
     <div class="large-container">
-      <div class="titolo"></div>
-      <div class="jumbotron">
+      <div class="main-title"></div>
+      <div class="jumbotron d-flex">
         <div class="small-col"></div>
         <div class="large-col"></div>
       </div>
     </div>
   </header>
 
-  <main></main>
+  <main>
+    <div class="small-container">
+      <section class="tariff m-top-100 border">
+        <div class="title border"></div>
+        <div class="choice border">
+          <div class="moth-choice"></div>
+          <div class="year-choice"></div>
+        </div>
+        <div class="tariff-card border">
+          <div class="card border"></div>
+          <div class="card border"></div>
+          <div class="card border"></div>
+        </div>
+      </section>
+      <section class="contact"></section>
+      <section class="partner"></section>
+      <section class="description"></section>
+      <section class="client"></section>
+      <section class="designit"></section>
+      <section class="try-free"></section>
+      <section class="FAQ"></section>
+    </div>
+  </main>
 
   <footer></footer>
 </body>
