Complete Main Layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <!--* Navbar Fixed -->
+  <!--! Navbar Fixed -->
   <div class="navbar-fixed">
     <div class="navbar-left border">
       <div id="logo" class="border">logo</div>
@@ -38,42 +38,111 @@
     </div>
   </div>
 
+  <!--! Header -->
   <header class="p-top-50">
     <!--* Jumbotron -->
     <div class="large-container">
-      <div class="main-title"></div>
-      <div class="jumbotron d-flex">
-        <div class="small-col"></div>
-        <div class="large-col"></div>
+      <div class="main-title border"></div>
+      <div class="jumbotron d-flex border">
+        <div class="small-col border"></div>
+        <div class="large-col border"></div>
       </div>
     </div>
   </header>
 
   <main>
     <div class="small-container">
-      <section class="tariff m-top-100 border">
+
+      <!--! Tariffs -->
+      <section class="tariff">
+
         <div class="title border"></div>
         <div class="choice border">
           <div class="moth-choice"></div>
           <div class="year-choice"></div>
         </div>
+
+        <!--? Tariffs Cards -->
         <div class="tariff-card border">
           <div class="card border"></div>
           <div class="card border"></div>
           <div class="card border"></div>
         </div>
+
+        <!--?  Contact -->
+        <div class="contact card border"></div>
       </section>
-      <section class="contact"></section>
-      <section class="partner"></section>
-      <section class="description"></section>
-      <section class="client"></section>
-      <section class="designit"></section>
-      <section class="try-free"></section>
-      <section class="FAQ"></section>
+
+      <!--! Partenr -->
+      <section class="partner d-flex">
+        <div class="large-col border"></div>
+        <div class="small-col border"></div>
+      </section>
+
+      <!--! Description -->
+      <section class="description">
+        <div class="title border"></div>
+        <div class="description-row border">
+          <div class="description-col border"></div>
+          <div class="description-col border"></div>
+          <div class="description-col border"></div>
+          <div class="description-col border"></div>
+          <div class="description-col border"></div>
+          <div class="description-col border"></div>
+        </div>
+      </section>
+    </div>
+
+    <!--! Client -->
+    <section class="client">
+      <div class="small-container">
+        <div class="title border"></div>
+        <a href="#">scritta</a>
+      </div>
+      <div class="designit">
+        <div class="square-col partner-box border">
+          <div class="show-partner border"></div>
+          <div class="show-partner border"></div>
+          <div class="show-partner border"></div>
+          <div class="show-partner border"></div>
+        </div>
+        <div class="square-col border"></div>
+        <div class="square-col partner-box border">
+          <div class="show-partner border"></div>
+          <div class="show-partner border"></div>
+          <div class="show-partner border"></div>
+          <div class="show-partner border"></div>
+        </div>
+      </div>
+    </section>
+
+    <!--! Try for Free -->
+    <section class="bg-try-free">
+      <div class="small-container try-free">
+        <div class="large-col border"></div>
+        <div class="small-col border"></div>
+      </div>
+    </section>
+
+    <!--! FAQ -->
+    <div class="small-container">
+      <section class="FAQ border"></section>
     </div>
   </main>
 
-  <footer></footer>
+  <!--! Footer -->
+  <footer>
+    <div class="large-container">
+      <div class="footer-top">
+        <div class="foot-col border"></div>
+        <div class="foot-col border"></div>
+        <div class="foot-col border"></div>
+        <div class="foot-col border"></div>
+        <div class="foot-col border"></div>
+      </div>
+      <div class="footer-bottom m-top-50"></div>
+    </div>
+  </footer>
 </body>
 
 </html>
