Complete Navbar Fixed

--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
 
   <!--! Navbar Fixed -->
   <div class="navbar-fixed">
-    <div class="navbar-left border">
-      <div id="logo" class="border">logo</div>
-      <nav class="border">
+    <div class="navbar-left">
+      <img id="logo" src="img/logo-small.png" alt="Logo DropBox">
+      <nav>
         <ul>
-          <li><a href="#">prova</a></li>
-          <li><a href="#">prova</a></li>
-          <li><a href="#">prova</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li><a href="#">Piani e Prezzi </a></li>
         </ul>
       </nav>
     </div>
-    <div class="navbar-right border">
-      <nav class="border">
+    <div class="navbar-right">
+      <nav>
         <ul>
-          <li><a href="#">prova</a></li>
-          <li><a href="#">prova</a></li>
-          <li><a href="#">prova</a></li>
-          <li><a href="#">prova</a></li>
+          <li><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
         </ul>
+        <div class="log-in">
+          <a class="button bg-white" href="#">Accedi</a>
+          <a class="button" href="#">Inizia</a>
+        </div>
       </nav>
     </div>
   </div>
