Complete Tariffs Section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <meta name="description" content="Replica del sito di DropBox">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" href="img/favicon.ico" type="ico/ico">
@@ -60,7 +62,8 @@
         <div class="small-col">
           <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
             stesso posto. Dropbox
-            Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il
+            Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
+            per ottimizzare il
             flusso di lavoro esistente.
           </p>
           <a href="#" class="button free-trial">Inizia la tua prova gratuita</a>
@@ -131,7 +134,8 @@
                 <!-- Funcions -->
                 <div class="function-details">
                   <i class="fa-solid fa-share-nodes"></i>
-                  <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                  <span>Funzioni di produttività premium e condivisione di file semplice e
+                    sicura</span>
                 </div>
               </div>
 
@@ -146,23 +150,183 @@
               <h4>Punti Salienti del piano</h4>
               <ul class="tariff-plane fa-ul">
                 <li>
-                  <span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span> Invia file fino
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span> Invia
+                  file fino
                   a 100 GB con Dropbox Transfert
                 </li>
                 <li>
-                  <span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span>Cartelle offline
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Cartelle
+                  offline
                   su dispositivi mobili
                 </li>
               </ul>
             </div>
           </div>
 
+          <!--* Second Card -->
+          <div class="card">
+            <div class="top-card">
+              <i class="fa-solid fa-users"></i>
+              <span>Team</span>
+            </div>
+            <div class="main-card">
+              <!-- Title -->
+              <h3>Advanced</h3>
+              <!-- Price -->
+              <div class="tariff-price">
+                <span><b>€ 18.00</b></span>
+                <div>/utente/mese</div>
+              </div>
 
+              <!-- Details -->
+              <div class="details m-sm">
+                <!-- utent -->
+                <div class="utent-details">
+                  <i class="fa-solid fa-users"></i>
+                  <span>3 o più utenti</span>
+                </div>
+
+                <!-- Space -->
+                <div class="space-details">
+                  <i class="fa-solid fa-folder"></i>
+                  <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
+                </div>
+
+                <!-- Funcions -->
+                <div class="function-details">
+                  <i class="fa-solid fa-share-nodes"></i>
+                  <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del
+                    tuo team</span>
+                </div>
+              </div>
+
+              <!-- Button -->
+              <a href="#" class="button details-button">Prova gratis per 30 giorni</a>
+              <div class="m-sm">opure <a href="#">acquista ora</a></div>
+
+              <!-- Separator -->
+              <div class="separator-20"></div>
+
+              <!-- Plane-->
+              <h4>Punti Salienti del piano</h4>
+              <ul class="tariff-plane fa-ul">
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span> Nessun limite di spazio per i file
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Cartelle ofline su dispositivi mobili
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Risparmi del 50% rispetto alle iscrizioni
+                  singole
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Possibilità di inserire nuovi membri del
+                  team
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Gestione dei permessi in base ai ruoli
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!--* Third Card -->
+          <div class="card">
+            <div class="top-card">
+              <i class="fa-solid fa-building"></i>
+              <span>Azienda</span>
+            </div>
+            <div class="main-card">
+              <!-- Title -->
+              <h3>Enterprice</h3>
+              <!-- Price -->
+              <div class="tariff-price">
+                <span><b>Contattaci</b></span>
+                <div>-</div>
+              </div>
+
+              <!-- Details -->
+              <div class="details m-sm">
+                <!-- utent -->
+                <div class="utent-details">
+                  <i class="fa-solid fa-user"></i>
+                  <span>10 o più utenti</span>
+                </div>
+
+                <!-- Space -->
+                <div class="space-details">
+                  <i class="fa-solid fa-folder"></i>
+                  <span>Soluzione personalizzata per la tua azienda</span>
+                </div>
+
+                <!-- Funcions -->
+                <div class="function-details">
+                  <i class="fa-solid fa-share-nodes"></i>
+                  <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su
+                    larga scala</span>
+                </div>
+              </div>
+
+              <!-- Button -->
+              <a href="#" class="button details-button">Contattaci</a>
+              <div class="m-sm">opure <a href="#">acquista ora</a></div>
+
+              <!-- Separator -->
+              <div class="separator-20"></div>
+
+              <!-- Plane-->
+              <h4>Punti Salienti del piano</h4>
+              <ul class="tariff-plane fa-ul">
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Cartelle ofline su dispositivi mobili
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Servizio assistenza 24/h
+                </li>
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-check"
+                      style="color: #0061ff;"></i></span>Possibilità di personalizzazione totale
+                </li>
+              </ul>
+            </div>
+          </div>
 
         </div>
 
         <!--?  Contact -->
-        <div class="contact card"></div>
+        <div class="card">
+          <div class="top-card">
+            <i class="fa-solid fa-building"></i>
+            <span>Team</span>
+          </div>
+          <div class="main-card d-flex">
+            <div class="large-col">
+              <!-- Title -->
+              <h3>Enterprice</h3>
+              <div class="f-size-09">
+                <!-- Price -->
+                <h4 class="m-top-sm">Contatta l'ufficio vendite per i prezzi</h4>
+                <!-- Description -->
+                <p class="m-top-m">Soluzioni personalizzate e supporto su misura per aiutare i
+                  professionisti IT
+                  nella gestione su qualsiasi scala</p>
+              </div>
+            </div>
+            <div class="small-col">
+              <a href="#" class="button details-button">Contatta l'ufficio vendite</a>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!--! Partenr -->
