--- a/index.html
+++ b/index.html
@@ -330,9 +330,17 @@
       </section>
 
       <!--! Partenr -->
-      <section class="partner d-flex">
-        <div class="large-col border"></div>
-        <div class="small-col border"></div>
+      <section class="partner">
+        <div class="large-col">
+          <img src="img/partner.png" alt="Partenr guys" class="partner-img">
+        </div>
+        <div class="small-col">
+          <h3>Entra in contatto con un partner Dropbox</h3>
+          <p>Trova un partner Dropbox e Hello Sign di fiducia. Ottieni le soluzione e i servizi
+            necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione,
+            integrazione, gestione e supporto continui.</p>
+          <a href="#" class="button bg-white">Trova un partner</a>
+        </div>
       </section>
 
       <!--! Description -->
