Add Description Section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   <meta charset="UTF-8">
@@ -345,14 +345,92 @@
 
       <!--! Description -->
       <section class="description">
-        <div class="title border"></div>
-        <div class="description-row border">
-          <div class="description-col border"></div>
-          <div class="description-col border"></div>
-          <div class="description-col border"></div>
-          <div class="description-col border"></div>
-          <div class="description-col border"></div>
-          <div class="description-col border"></div>
+        <h2 class="title">Esegui più operazioni con Dropbox Business</h2>
+        <div class="description-row">
+
+          <!--* First Col -->
+          <div class="description-col">
+            <!-- ? immage -->
+            <img src="img/business-feature-switching-tools.png" alt="feature switching tools">
+
+            <!-- ? Title -->
+            <h3>Passa di meno da uno stumento all'altro</h3>
+
+            <!-- ? Paragraph -->
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e
+              condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file
+              Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+
+          <!--* Second Col -->
+          <div class="description-col">
+            <!-- ? immage -->
+            <img src="img/business-feature-send-files-it.png" alt="feature send files">
+
+            <!-- ? Title -->
+            <h3>Passa di meno da uno stumento all'altro</h3>
+
+            <!-- ? Paragraph -->
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e
+              condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file
+              Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+
+          <!--* Third Col -->
+          <div class="description-col">
+            <!-- ? immage -->
+            <img src="img/business-feature-coordinate-it.png" alt="feature coordinate">
+
+            <!-- ? Title -->
+            <h3>Passa di meno da uno stumento all'altro</h3>
+
+            <!-- ? Paragraph -->
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e
+              condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file
+              Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+
+          <!--* Fourth Col -->
+          <div class="description-col">
+            <!-- ? immage -->
+            <img src="img/business-feature-integrations-it.png" alt="feature integration">
+
+            <!-- ? Title -->
+            <h3>Passa di meno da uno stumento all'altro</h3>
+
+            <!-- ? Paragraph -->
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e
+              condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file
+              Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+
+          <!--* Fifth Col -->
+          <div class="description-col">
+            <!-- ? immage -->
+            <img src="img/business-feature-multi-device.png" alt="feature multidevice">
+
+            <!-- ? Title -->
+            <h3>Passa di meno da uno stumento all'altro</h3>
+
+            <!-- ? Paragraph -->
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e
+              condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file
+              Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+
+          <!--* Seventh Col -->
+          <div class="description-col">
+            <!-- ? immage -->
+            <img src="img/business-feature-security.png" alt="feature security">
+
+            <!-- ? Title -->
+            <h3>Passa di meno da uno stumento all'altro</h3>
+
+            <!-- ? Paragraph -->
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e
+              condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file
+              Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
         </div>
       </section>
     </div>
@@ -360,8 +438,8 @@
     <!--! Client -->
     <section class="client">
       <div class="small-container">
-        <div class="title border"></div>
-        <a href="#">scritta</a>
+        <h2 class="title border">Più di 500.00 team utilizzano Dropbox Business</h2>
+        <a href="#">Scopri di più sui nostri clienti</a>
       </div>
       <div class="designit">
         <div class="square-col partner-box border">
