Complete a Client Section

--- a/index.html
+++ b/index.html
@@ -438,22 +438,74 @@
     <!--! Client -->
     <section class="client">
       <div class="small-container">
-        <h2 class="title border">Più di 500.00 team utilizzano Dropbox Business</h2>
+        <h2 class="title">Più di 500.00 team utilizzano Dropbox Business</h2>
         <a href="#">Scopri di più sui nostri clienti</a>
       </div>
       <div class="designit">
-        <div class="square-col partner-box border">
-          <div class="show-partner border"></div>
-          <div class="show-partner border"></div>
-          <div class="show-partner border"></div>
-          <div class="show-partner border"></div>
+
+        <!--? LEFT SQUARE -->
+        <div class="square-col">
+
+          <!--* Designit -->
+          <div class="partner-logo bg-designit">
+            <img src="img/designit.svg" alt="Designit logo">
+          </div>
+
+          <!--*  Arizona Utate University -->
+          <div class="partner-logo bg-asu">
+            <img src="img/arizona_state_university.svg" alt="arizona state university">
+          </div>
+
+          <!--* University of Florida -->
+          <div class="partner-logo bg-uf">
+            <img src="img/university_of_florida.svg" alt="university of florida">
+          </div>
+
+          <!--* Topps -->
+          <div class="partner-logo bg-topps">
+            <img src="img/topps.svg" alt="Topps">
+          </div>
         </div>
-        <div class="square-col border"></div>
-        <div class="square-col partner-box border">
-          <div class="show-partner border"></div>
-          <div class="show-partner border"></div>
-          <div class="show-partner border"></div>
-          <div class="show-partner border"></div>
+
+        <!--? MIDDLE SQUARE -->
+        <div class="middle square-col">
+          <img class="designit-logo" src="img/designit.svg" alt="Designit logo">
+
+          <div class="separator-20"></div>
+
+          <p>
+            "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi.
+            Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto
+            Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili cn queste esigenze, ma
+            nessuna è facile quanto Dropbox Paper".
+          </p>
+
+          <div class="m-top-m">Morten Thomsen, Global IT Lead</div>
+        </div>
+
+
+        <!--? RIGHT SQUARE -->
+        <div class="square-col">
+
+          <!--* World Bicycle Relief -->
+          <div class="partner-logo bg-wbr">
+            <img src="img/world_bicycle_relief.svg" alt="world bicycle relief">
+          </div>
+
+          <!--* Hearst Corp -->
+          <div class="partner-logo bg-hearst">
+            <img src="img/hearst_corp.svg" alt="hearst corp">
+          </div>
+
+          <!--* Lonely Planet -->
+          <div class="partner-logo bg-planet">
+            <img src="img/lonely_planet.svg" alt="Lonely Planet">
+          </div>
+
+          <!--* Clear Channel -->
+          <div class="partner-logo bg-channel">
+            <img src="img/clear_channel.svg" alt="Clear Channel">
+          </div>
         </div>
       </div>
     </section>
