Complete Try for Free Section

--- a/index.html
+++ b/index.html
@@ -513,8 +513,12 @@
     <!--! Try for Free -->
     <section class="bg-try-free">
       <div class="small-container try-free">
-        <div class="large-col border"></div>
-        <div class="small-col border"></div>
+        <div class="large-col">
+          <h2 class="title">Porta Dropbox Business nelal tua azienda.</h2>
+        </div>
+        <div class="small-col">
+          <a class="button bg-white" href="#">Inizia la tua prova gratuita</a>
+        </div>
       </div>
     </section>
 
