Complete a FAQ Section and Main

--- a/index.html
+++ b/index.html
@@ -523,9 +523,23 @@
     </section>
 
     <!--! FAQ -->
-    <div class="small-container">
-      <section class="FAQ border"></section>
-    </div>
+    <section>
+      <div class="small-container">
+        <h2 class="title">Domande frequenti</h2>
+        <div class="FAQ">
+          <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
+          <span><i class="fa-solid fa-chevron-down fa-s"></i></span>
+        </div>
+        <div class="FAQ">
+          <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
+          <span><i class="fa-solid fa-chevron-down fa-s"></i></span>
+        </div>
+        <div class="FAQ">
+          <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
+          <span><i class="fa-solid fa-chevron-down fa-s"></i></span>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!--! Footer -->
