--- a/index.html
+++ b/index.html
@@ -546,13 +546,78 @@
   <footer>
     <div class="large-container">
       <div class="footer-top">
-        <div class="foot-col border"></div>
-        <div class="foot-col border"></div>
-        <div class="foot-col border"></div>
-        <div class="foot-col border"></div>
-        <div class="foot-col border"></div>
+
+        <!--* First Column -->
+        <div class="foot-col">
+          <h5>Dropbox</h5>
+          <ul>
+            <li><a href="#">Applicazione desktop</a></li>
+            <li><a href="#">Perchè Dropbox</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
+          </ul>
+        </div>
+
+        <!--* Second Column -->
+        <div class="foot-col">
+          <h5>Prodotti</h5>
+          <ul>
+            <li><a href="#">Applicazione desktop</a></li>
+            <li><a href="#">Perchè Dropbox</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
+          </ul>
+        </div>
+
+        <!--* Third Column -->
+        <div class="foot-col">
+          <h5>Azienda</h5>
+          <ul>
+            <li><a href="#">Applicazione desktop</a></li>
+            <li><a href="#">Perchè Dropbox</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
+          </ul>
+        </div>
+
+        <!--* Fourth Column -->
+        <div class="foot-col">
+          <h5>Supporto</h5>
+          <ul>
+            <li><a href="#">Applicazione desktop</a></li>
+            <li><a href="#">Perchè Dropbox</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
+          </ul>
+        </div>
+
+        <!--* Fifth Column -->
+        <div class="foot-col">
+          <h5>Community</h5>
+          <ul>
+            <li><a href="#">Applicazione desktop</a></li>
+            <li><a href="#">Perchè Dropbox</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
+          </ul>
+        </div>
+
       </div>
-      <div class="footer-bottom m-top-m"></div>
+
+      <div class="separator-10"></div>
+
+      <div class="footer-bottom m-top-m">
+        <div class="select-lenguage">
+          <i class="fa-solid fa-earth-americas"></i>
+          <span>Italiano</span>
+          <i class="fa-solid fa-caret-up fa-xs"></i>
+        </div>
+      </div>
     </div>
   </footer>
 </body>
