Fix List Details Tariffs

--- a/index.html
+++ b/index.html
@@ -119,24 +119,26 @@
 
               <!-- Details -->
               <div class="details m-sm">
-                <!-- utent -->
-                <div class="utent-details">
-                  <i class="fa-solid fa-user"></i>
-                  <span>1 utente</span>
-                </div>
+                <ul class="fa-ul">
 
-                <!-- Space -->
-                <div class="space-details">
-                  <i class="fa-solid fa-folder"></i>
-                  <span>5 TB di spazio di archiviazione sicuro</span>
-                </div>
+                  <!-- User -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-user"></i></span>
+                    1 utente
+                  </li>
 
-                <!-- Funcions -->
-                <div class="function-details">
-                  <i class="fa-solid fa-share-nodes"></i>
-                  <span>Funzioni di produttività premium e condivisione di file semplice e
-                    sicura</span>
-                </div>
+                  <!-- Space -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
+                    5 TB di spazio di archiviazione sicuro
+                  </li>
+
+                  <!-- Share -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+                    Funzioni di produttività premium e condivisione di file semplice e sicura
+                  </li>
+                </ul>
               </div>
 
               <!-- Button -->
@@ -148,7 +150,7 @@
 
               <!-- Plane-->
               <h4>Punti Salienti del piano</h4>
-              <ul class="tariff-plane fa-ul">
+              <ul class="fa-ul">
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
                       style="color: #0061ff;"></i></span> Invia
@@ -182,24 +184,27 @@
 
               <!-- Details -->
               <div class="details m-sm">
-                <!-- utent -->
-                <div class="utent-details">
-                  <i class="fa-solid fa-users"></i>
-                  <span>3 o più utenti</span>
-                </div>
+                <ul class="fa-ul">
 
-                <!-- Space -->
-                <div class="space-details">
-                  <i class="fa-solid fa-folder"></i>
-                  <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
-                </div>
+                  <!-- User -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-user"></i></span>
+                    3 o più utenti
+                  </li>
 
-                <!-- Funcions -->
-                <div class="function-details">
-                  <i class="fa-solid fa-share-nodes"></i>
-                  <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del
-                    tuo team</span>
-                </div>
+                  <!-- Space -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
+                    Tutto lo spazio di cui ha bisogno il tuo team
+                  </li>
+
+                  <!-- Share -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+                    Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo
+                    team
+                  </li>
+                </ul>
               </div>
 
               <!-- Button -->
@@ -255,24 +260,27 @@
 
               <!-- Details -->
               <div class="details m-sm">
-                <!-- utent -->
-                <div class="utent-details">
-                  <i class="fa-solid fa-user"></i>
-                  <span>10 o più utenti</span>
-                </div>
+                <ul class="fa-ul">
 
-                <!-- Space -->
-                <div class="space-details">
-                  <i class="fa-solid fa-folder"></i>
-                  <span>Soluzione personalizzata per la tua azienda</span>
-                </div>
+                  <!-- User -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-user"></i></span>
+                    10 o più utenti
+                  </li>
 
-                <!-- Funcions -->
-                <div class="function-details">
-                  <i class="fa-solid fa-share-nodes"></i>
-                  <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su
-                    larga scala</span>
-                </div>
+                  <!-- Space -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
+                    Soluzione personalizzata per la tua azienda
+                  </li>
+
+                  <!-- Share -->
+                  <li>
+                    <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+                    Assistenza personalizzata per aiutare gli amministratori in una gestione su
+                    larga scala
+                  </li>
+                </ul>
               </div>
 
               <!-- Button -->
